# track-workout

./: README.md  app.py  bw-notes.md  pyproject.toml  requirements.txt
static/: mockup.html  state-diagram.html
