[project]
name = "track-workout"
version = "0.1.0"
description = "A workout tracking application"
requires-python = ">=3.9"
dependencies = [
    "fastcore>=1.5.0",
    "monsterui>=0.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39" 